misc manager cleanup